--- a/clairvoyant.ipynb
+++ b/clairvoyant.ipynb
@@ -28,106 +28,139 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from hungarian_algorithm import algorithm as km\n",
+    "from scipy.optimize import linear_sum_assignment\n",
     "import numpy as np\n",
-    "customers_det = [250, 250, 250, 250]\n",
-    "prices = [250, 400]\n",
-    "promos = [0.0, 0.5, 0.10, 0.25]\n",
+    "customers_det = np.random.randint(250, size=4)\n",
+    "prices = np.array([250, 400])\n",
+    "promos = np.array([0.0, 0.5, 0.10, 0.25])\n",
     "\n",
     "conv_rate1 = [0.3, 0.4, 0.25, 0.45]\n",
-    "conv_rate2 = [[0.1, 0.2, 0.15, 0.2],#p0\n",
-    "              [0.15, 0.25, 0.2, 0.25],#p1\n",
-    "              [0.2, 0.35, 0.25, 0.4],#p2\n",
-    "              [0.4, 0.45, 0.35, 0.6]]#p3"
+    "conv_rate2 = np.array([[0.1, 0.2, 0.15, 0.2],#p0\n",
+    "                    [0.15, 0.25, 0.2, 0.25],#p1\n",
+    "                    [0.2, 0.35, 0.25, 0.4],#p2\n",
+    "                    [0.4, 0.45, 0.35, 0.6]])#p3"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "output_type": "execute_result",
      "data": {
       "text/plain": [
-       "{'[0.27151799 0.36419147 0.19400061 0.17028993]': {'Class0': 63,\n",
-       "  'Class1': 29,\n",
-       "  'Class2': 78,\n",
-       "  'Class3': 72},\n",
-       " '[0.63987408 0.01914529 0.1123398  0.22864083]': {'Class0': 55,\n",
-       "  'Class1': 98,\n",
-       "  'Class2': 84,\n",
-       "  'Class3': 23},\n",
-       " '[0.10400866 0.18496193 0.05568831 0.6553411 ]': {'Class0': 1,\n",
-       "  'Class1': 42,\n",
-       "  'Class2': 72,\n",
-       "  'Class3': 28},\n",
-       " '[0.43521121 0.17790379 0.12784744 0.25903757]': {'Class0': 37,\n",
-       "  'Class1': 33,\n",
-       "  'Class2': 38,\n",
-       "  'Class3': 14}}"
+       "array([[  72.1603461 ,  276.04458429, 1698.21411923,  460.22642554],\n",
+       "       [  95.90780317, 1321.42005489,  411.33532507, 2244.9654203 ],\n",
+       "       [ 119.02766508, 2386.62760287,  691.48013477, 2111.56308854],\n",
+       "       [  80.5717389 , 4719.57080412, 3810.38111964,  634.65366541]])"
       ]
      },
      "metadata": {},
-     "execution_count": 43
+     "execution_count": 3
     }
    ],
    "source": [
     "#https://numpy.org/doc/stable/reference/random/generated/numpy.random.dirichlet.html\n",
-    "fractions = np.array([np.random.dirichlet(np.ones(4)) for x in range(4)])\n",
-    "#fractions\n",
-    "graph = {}\n",
+    "fractions = np.array([np.random.dirichlet([5,3,2,1]) for x in range(4)])\n",
+    "graph = []\n",
     "\n",
-    "for dist in fractions:\n",
-    "    graph[str(dist)] = {'Class0': np.random.randint(100), 'Class1': np.random.randint(100), 'Class2': np.random.randint(100), 'Class3': np.random.randint(100)}\n",
-    "graph"
+    "for i, frac in enumerate(fractions):\n",
+    "    discount = 1 - promos\n",
+    "    graph.append((discount*conv_rate2[i]*frac*customers_det)*prices[1])\n",
+    "np.array(graph)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "output_type": "execute_result",
      "data": {
       "text/plain": [
-       "[(('[0.43521121 0.17790379 0.12784744 0.25903757]', 'Class0'), 37),\n",
-       " (('[0.63987408 0.01914529 0.1123398  0.22864083]', 'Class1'), 98),\n",
-       " (('[0.27151799 0.36419147 0.19400061 0.17028993]', 'Class3'), 72),\n",
-       " (('[0.10400866 0.18496193 0.05568831 0.6553411 ]', 'Class2'), 72)]"
+       "[(2, 0), (0, 1), (1, 2), (3, 3)]"
       ]
      },
      "metadata": {},
-     "execution_count": 44
+     "execution_count": 4
     }
    ],
    "source": [
-    "km.find_matching(graph, matching_type = 'max', return_type = 'list' )"
+    "row_ind, col_ind = linear_sum_assignment(graph)\n",
+    "assignment = sorted(zip(row_ind, col_ind), key = lambda x: x[1])\n",
+    "assignment"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "Best Fraction for Class0: [0.4959486  0.3479049  0.07113993 0.08500657]\nBest Fraction for Class1: [0.60133622 0.07041954 0.29118898 0.03705527]\nBest Fraction for Class2: [0.53282113 0.26967756 0.05289806 0.14460325]\nBest Fraction for Class3: [0.16785779 0.53509873 0.28001037 0.01703311]\nWeight sum (min): 1441.0612398524386\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "print('Best Fraction for Class0: ' + str(fractions[assignment[0][0]]))\n",
+    "print('Best Fraction for Class1: ' + str(fractions[assignment[1][0]]))\n",
+    "print('Best Fraction for Class2: ' + str(fractions[assignment[2][0]]))\n",
+    "print('Best Fraction for Class3: ' + str(fractions[assignment[3][0]]))\n",
+    "print('Weight sum (min): ' + str(graph[assignment[0][0]][assignment[0][1]] + graph[assignment[1][0]][assignment[1][1]] + graph[assignment[2][0]][assignment[2][1]] + graph[assignment[3][0]][assignment[3][1]]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "output_type": "execute_result",
      "data": {
       "text/plain": [
-       "279"
+       "[(2, 0), (3, 1), (0, 2), (1, 3)]"
       ]
      },
      "metadata": {},
-     "execution_count": 47
+     "execution_count": 6
     }
    ],
    "source": [
-    "km.find_matching(graph, matching_type = 'max', return_type = 'total' )"
+    "maxGraph = np.amax(graph)-graph\n",
+    "row_ind_max, col_ind_max = linear_sum_assignment(maxGraph) \n",
+    "assignment = list(sorted(zip(row_ind_max, col_ind_max), key = lambda x: x[1]))\n",
+    "assignment\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "Best Fraction for Class0: [0.4959486  0.3479049  0.07113993 0.08500657]\nBest Fraction for Class1: [0.16785779 0.53509873 0.28001037 0.01703311]\nBest Fraction for Class2: [0.60133622 0.07041954 0.29118898 0.03705527]\nBest Fraction for Class3: [0.53282113 0.26967756 0.05289806 0.14460325]\nWeight sum (min): 8781.778008735724\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('Best Fraction for Class0: ' + str(fractions[assignment[0][0]]))\n",
+    "print('Best Fraction for Class1: ' + str(fractions[assignment[1][0]]))\n",
+    "print('Best Fraction for Class2: ' + str(fractions[assignment[2][0]]))\n",
+    "print('Best Fraction for Class3: ' + str(fractions[assignment[3][0]]))\n",
+    "print('Weight sum (min): ' + str(graph[assignment[0][0]][assignment[0][1]] + graph[assignment[1][0]][assignment[1][1]] + graph[assignment[2][0]][assignment[2][1]] + graph[assignment[3][0]][assignment[3][1]]))"
    ]
   },
   {
