--- a/clairvoyant.ipynb
+++ b/clairvoyant.ipynb
@@ -28,12 +28,40 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
+    "#trick to import .py in a notebook\n",
+    "!python3 environment.py\n",
+    "import environment\n",
+    "\n",
+    "gaussian_parameters = [1,2,3,4],[3,2,1,2]\n",
+    "promo_codes = [0.25, 0.30, 0.50, 0.75]\n",
+    "env = environment.Environment(gaussian_parameters, promo_codes)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "[1, 2, 3, 4]"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 6
+    }
+   ],
+   "source": [
     "from scipy.optimize import linear_sum_assignment\n",
     "import numpy as np\n",
+    "\n",
+    "\n",
     "customers_det = np.random.randint(250, size=4)\n",
     "prices = np.array([250, 400])\n",
     "promos = np.array([0.0, 0.5, 0.10, 0.25])\n",
@@ -47,21 +75,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "output_type": "execute_result",
      "data": {
       "text/plain": [
-       "array([[  72.1603461 ,  276.04458429, 1698.21411923,  460.22642554],\n",
-       "       [  95.90780317, 1321.42005489,  411.33532507, 2244.9654203 ],\n",
-       "       [ 119.02766508, 2386.62760287,  691.48013477, 2111.56308854],\n",
-       "       [  80.5717389 , 4719.57080412, 3810.38111964,  634.65366541]])"
+       "array([[1832.61072296,  559.06653928,  114.15891087,  281.56248964],\n",
+       "       [1815.50359036, 3257.50155987,  198.72252033,  147.88696117],\n",
+       "       [2810.19293096, 1761.75824503,  453.69010561,  388.70779559],\n",
+       "       [4157.4792173 , 3397.68713586,  948.90272367,   38.27725408]])"
       ]
      },
      "metadata": {},
-     "execution_count": 3
+     "execution_count": 7
     }
    ],
    "source": [
@@ -77,18 +105,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "output_type": "execute_result",
      "data": {
       "text/plain": [
-       "[(2, 0), (0, 1), (1, 2), (3, 3)]"
+       "[(1, 0), (0, 1), (2, 2), (3, 3)]"
       ]
      },
      "metadata": {},
-     "execution_count": 4
+     "execution_count": 8
     }
    ],
    "source": [
@@ -99,14 +127,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "Best Fraction for Class0: [0.4959486  0.3479049  0.07113993 0.08500657]\nBest Fraction for Class1: [0.60133622 0.07041954 0.29118898 0.03705527]\nBest Fraction for Class2: [0.53282113 0.26967756 0.05289806 0.14460325]\nBest Fraction for Class3: [0.16785779 0.53509873 0.28001037 0.01703311]\nWeight sum (min): 1441.0612398524386\n"
+      "Best Fraction for Class0: [0.52169643 0.33071082 0.13143024 0.01616251]\nBest Fraction for Class1: [0.78991842 0.07094753 0.10066923 0.03846482]\nBest Fraction for Class2: [0.60564503 0.12775622 0.24004767 0.02655108]\nBest Fraction for Class3: [0.44800423 0.19163492 0.35861781 0.00174304]\nWeight sum (min): 2866.5374893329304\n"
      ]
     }
    ],
@@ -121,18 +149,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "output_type": "execute_result",
      "data": {
       "text/plain": [
-       "[(2, 0), (3, 1), (0, 2), (1, 3)]"
+       "[(3, 0), (1, 1), (2, 2), (0, 3)]"
       ]
      },
      "metadata": {},
-     "execution_count": 6
+     "execution_count": 10
     }
    ],
    "source": [
@@ -144,14 +172,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "Best Fraction for Class0: [0.4959486  0.3479049  0.07113993 0.08500657]\nBest Fraction for Class1: [0.16785779 0.53509873 0.28001037 0.01703311]\nBest Fraction for Class2: [0.60133622 0.07041954 0.29118898 0.03705527]\nBest Fraction for Class3: [0.53282113 0.26967756 0.05289806 0.14460325]\nWeight sum (min): 8781.778008735724\n"
+      "Best Fraction for Class0: [0.44800423 0.19163492 0.35861781 0.00174304]\nBest Fraction for Class1: [0.52169643 0.33071082 0.13143024 0.01616251]\nBest Fraction for Class2: [0.60564503 0.12775622 0.24004767 0.02655108]\nBest Fraction for Class3: [0.78991842 0.07094753 0.10066923 0.03846482]\nWeight sum (min): 8150.233372426513\n"
      ]
     }
    ],
