--- a/step3.ipynb
+++ b/step3.ipynb
@@ -41,10 +41,6 @@
     "from mab.ts_learner import *\n",
     "from mab.ucb_learner import *\n",
     "\n",
-    "\n",
-    "\n",
-    "prices = [500, 690, 750, 850]\n",
-    "\n",
     "#Customers\n",
     "customerParams = zip([200,200,200,200], [50,50,50,50])\n",
     "#discounts\n",
@@ -54,7 +50,8 @@
     "                    [0.15, 0.25, 0.2, 0.25],\n",
     "                    [0.2, 0.35, 0.25, 0.4],\n",
     "                    [0.4, 0.45, 0.35, 0.6]])\n",
-    "\n",
+    "                    \n",
+    "prices = [500, 690, 750, 850, 900]\n",
     "n_classes = 4\n",
     "\n",
     "def generate_conversion_rate(prices):\n",
@@ -85,9 +82,10 @@
     "\n",
     "for e in range(0, n_experiments):\n",
     "    env = Environment(customerParams, discounts, prices, conv_rate1, conv_rate2, [], [])\n",
-    "    ts_learner =TS_Learner(n_arms=len(prices))\n",
+    "    ts_learner =TS_Learner(arms=prices)\n",
     "    u_learner = UCB(n_arms=len(prices))\n",
     "    for t in range(0,T):\n",
+    "        arms = prices + \n",
     "        pulled_arm = ts_learner.pull_arm()\n",
     "        reward = env.round(pulled_arm)\n",
     "        ts_learner.update(pulled_arm,reward)\n",
