Step3 to be cleaned, but completed

--- a/test.ipynb
+++ b/test.ipynb
@@ -61,7 +61,7 @@
     "\n",
     "            if has_bought1 == 1:\n",
     "                has_bought2 = env.round2(idx, shop.matched_promos[idx], shop.best_price[1])\n",
-    "                partial_revenue += has_bought2*shop.best_price[1]*(1-shop.matched_promos[idx])\n",
+    "                partial_revenue += has_bought2*shop.best_price[1]*(1-shop.discounts[shop.matched_promos[cust]])\n",
     "\n",
     "            revenue.append(partial_revenue)\n",
     "            expected_revenue = shop.best_price[0]*env.true_conv1[idx, utilities.index(env.prices1, shop.best_price[0])] + env.true_conv1[idx, utilities.index(env.prices1, shop.best_price[0])]*env.true_conv2[idx, shop.matched_promos[idx], utilities.index(env.prices1, shop.best_price[0])]*shop.best_price[1]*(1-shop.matched_promos[idx])\n",
