--- a/step3.ipynb
+++ b/step3.ipynb
@@ -10,12 +10,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.8.3"
   },
   "orig_nbformat": 2,
   "kernelspec": {
    "name": "python3",
-   "display_name": "Python 3.8.10 64-bit"
+   "display_name": "Python 3.8.3 32-bit"
   },
   "metadata": {
    "interpreter": {
@@ -23,7 +23,7 @@
    }
   },
   "interpreter": {
-   "hash": "31f2aee4e71d21fbe5cf8b01ff0e069b9275f58929596ceb00d14d90e3e16cd6"
+   "hash": "228e651cc4a48423604d0443f50a86427611fe0978b12785d27282ccd6ac66f5"
   }
  },
  "nbformat": 4,
@@ -31,12 +31,12 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "source": [
-    "import Environment\n",
-    "import Shop\n",
-    "from mab.ts_learner import *\n",
-    "from mab.ucb_learner import *\n",
+    "import Environment\r\n",
+    "import Shop\r\n",
+    "from mab.ts_learner import *\r\n",
+    "from mab.ucb_learner import *\r\n",
     "from utilities import *"
    ],
    "outputs": [],
@@ -56,114 +56,151 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "source": [
-    "shop_ts = Shop.Shop()\n",
-    "shop_ucb = Shop.Shop()\n",
-    "shop_clairvoyant = Shop.Shop()\n",
-    "\n",
-    "env = Environment.Environment(shop_clairvoyant.prices1,shop_clairvoyant.prices2,shop_clairvoyant.discounts)\n",
-    "\n",
-    "# The environment decides the conversion rates, which are shared among all the shops.\n",
-    "shop_clairvoyant.set_conv_rate(env.true_conv1, env.true_conv2)\n",
-    "shop_ts.set_conv_rate(env.true_conv1,env.true_conv2)\n",
-    "shop_ucb.set_conv_rate(env.true_conv1, env.true_conv2)\n",
-    "\n",
-    "#Initialize learners\n",
-    "shop_ts.set_price_learner('TS')\n",
-    "shop_ucb.set_price_learner('UCB')\n"
+    "shop_ts = Shop.Shop()\r\n",
+    "shop_ucb = Shop.Shop()\r\n",
+    "shop_clairvoyant = Shop.Shop()\r\n",
+    "\r\n",
+    "print(shop_ts.prices1)\r\n",
+    "print(shop_ts.prices2)\r\n",
+    "\r\n",
+    "env = Environment.Environment(shop_clairvoyant.prices1,shop_clairvoyant.prices2,shop_clairvoyant.discounts)\r\n",
+    "\r\n",
+    "# The environment decides the conversion rates, which are shared among all the shops.\r\n",
+    "shop_clairvoyant.set_conv_rate(env.true_conv1, env.true_conv2)\r\n",
+    "shop_ts.set_conv_rate(env.true_conv1,env.true_conv2)\r\n",
+    "shop_ucb.set_conv_rate(env.true_conv1, env.true_conv2)\r\n",
+    "\r\n",
+    "#Initialize learners\r\n",
+    "shop_ts.set_price_learner('TS')\r\n",
+    "shop_ucb.set_price_learner('UCB')\r\n"
+   ],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "[ 80. 200. 360. 560. 800.]\n",
+      "[ 100.  250.  450.  700. 1000.]\n"
+     ]
+    }
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "source": [
+    "days = 365\r\n",
+    "\r\n",
+    "ts_rewards_per_class_per_day = []\r\n",
+    "u_rewards_per_class_per_day = []\r\n",
+    "clairvoyant_per_class_per_day = []\r\n",
+    "\r\n",
+    "for day in range(days):\r\n",
+    "    #Generating customers for the next day\r\n",
+    "    env.generate_next_day_customers()\r\n",
+    "    \r\n",
+    "    #Every shop knows how many customers are coming\r\n",
+    "    shop_clairvoyant.set_expected_customers(env.customers)\r\n",
+    "    shop_ts.set_expected_customers(env.customers)\r\n",
+    "    shop_ucb.set_expected_customers(env.customers)\r\n",
+    "\r\n",
+    "    #Pull arm from learners \r\n",
+    "    chosen_price_ts = shop_ts.price_learner.pull_arm(shop_ts.customers)\r\n",
+    "    chosen_price_ucb = shop_ucb.price_learner.pull_arm() \r\n",
+    "\r\n",
+    "    #Calculate the best promos for the current pulled arms\r\n",
+    "    shop_clairvoyant.best_promo_per_class()\r\n",
+    "    shop_ts.best_promo_per_class(chosen_price_ts)\r\n",
+    "    shop_ucb.best_promo_per_class(chosen_price_ucb)\r\n",
+    "    \r\n",
+    "    #Shuffle customers and unroll customers and coupons array\r\n",
+    "    shop_clairvoyant.print_coupons()\r\n",
+    "    shop_ts.print_coupons()\r\n",
+    "    shop_ucb.print_coupons()\r\n",
+    "    \r\n",
+    "    clairvoyant_per_class = []\r\n",
+    "    revenue_ts = []\r\n",
+    "    revenue_ucb = []\r\n",
+    "    \r\n",
+    "    np.random.shuffle(shop_ts.customers_random)\r\n",
+    "\r\n",
+    "    #print(shop_ts.prices2)\r\n",
+    "    #print(shop_ts.best_price[1])\r\n",
+    "\r\n",
+    "    for cust in shop_ts.customers_random:\r\n",
+    "        partial_revenue = 0\r\n",
+    "        cust = int(cust)\r\n",
+    "        #Check if first item has been bought and update the parameters\r\n",
+    "\r\n",
+    "        ## WHY DO WE USE BEST PRICE INSTEAD OF PULLED ARM????\r\n",
+    "        ts_has_bought1 = env.round1(cust, shop_ts.best_price[0])\r\n",
+    "        shop_ts.price_learner.update(chosen_price_ts, ts_has_bought1, cust)\r\n",
+    "\r\n",
+    "        ucb_has_bought1 = env.round1(cust, shop_ucb.best_price[0])\r\n",
+    "        shop_ucb.price_learner.update(chosen_price_ucb, ucb_has_bought1, cust)\r\n",
+    "        \r\n",
+    "        partial_revenue_ts = ts_has_bought1*shop_ts.best_price[0]\r\n",
+    "        partial_revenue_ucb = ucb_has_bought1*shop_ucb.best_price[0]\r\n",
+    "\r\n",
+    "        #Check if second item has been bought\r\n",
+    "        if ts_has_bought1 == 1:\r\n",
+    "            ts_has_bought2 = env.round2(cust, shop_ts.matched_promos[cust], shop_ts.best_price[1])\r\n",
+    "            partial_revenue_ts += ts_has_bought2*shop_ts.best_price[1]*(1-shop_ts.discounts[shop_ts.matched_promos[cust]])\r\n",
+    "        revenue_ts.append(partial_revenue_ts)\r\n",
+    "        \r\n",
+    "        if ucb_has_bought1 == 1:\r\n",
+    "            ucb_has_bought2 = env.round2(cust, shop_ucb.matched_promos[cust], shop_ucb.best_price[1])\r\n",
+    "            partial_revenue_ucb += ucb_has_bought2*shop_ucb.best_price[1]*(1-shop_ucb.discounts[shop_ucb.matched_promos[cust]])\r\n",
+    "        revenue_ucb.append(partial_revenue_ucb)\r\n",
+    "\r\n",
+    "        expected_revenue = shop_clairvoyant.best_price[0]*env.true_conv1[cust, index(env.prices1, shop_clairvoyant.best_price[0])] + env.true_conv1[cust, index(env.prices1, shop_clairvoyant.best_price[0])]*env.true_conv2[cust, shop_clairvoyant.matched_promos[cust], index(env.prices2, shop_clairvoyant.best_price[1])]*shop_clairvoyant.best_price[1]*(1-shop_clairvoyant.discounts[shop_clairvoyant.matched_promos[cust]])\r\n",
+    "        clairvoyant_per_class.append(expected_revenue)\r\n",
+    "    \r\n",
+    "    ts_rewards_per_class_per_day.append(np.mean(revenue_ts))\r\n",
+    "    u_rewards_per_class_per_day.append(np.mean(revenue_ucb))\r\n",
+    "    clairvoyant_per_class_per_day.append(np.mean(clairvoyant_per_class))\r\n"
    ],
    "outputs": [],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 10,
    "source": [
-    "days = 365\n",
-    "\n",
-    "ts_rewards_per_class_per_day = []\n",
-    "u_rewards_per_class_per_day = []\n",
-    "clairvoyant_per_class_per_day = []\n",
-    "\n",
-    "for day in range(days):\n",
-    "    #Generating customers for the next day\n",
-    "    env.generate_next_day_customers()\n",
-    "    \n",
-    "    #Every shop knows how many customers are coming\n",
-    "    shop_clairvoyant.set_expected_customers(env.customers)\n",
-    "    shop_ts.set_expected_customers(env.customers)\n",
-    "    shop_ucb.set_expected_customers(env.customers)\n",
-    "\n",
-    "    #Pull arm from learners \n",
-    "    chosen_price_ts = shop_ts.price_learner.pull_arm(shop_ts.customers)\n",
-    "    chosen_price_ucb = shop_ucb.price_learner.pull_arm() \n",
-    "\n",
-    "    #Calculate the best promos for the current pulled arms\n",
-    "    shop_clairvoyant.best_promo_per_class()\n",
-    "    shop_ts.best_promo_per_class(chosen_price_ts)\n",
-    "    shop_ucb.best_promo_per_class(chosen_price_ucb)\n",
-    "    \n",
-    "    #Shuffle customers and unroll customers and coupons array\n",
-    "    shop_clairvoyant.print_coupons()\n",
-    "    shop_ts.print_coupons()\n",
-    "    shop_ucb.print_coupons()\n",
-    "    \n",
-    "    clairvoyant_per_class = []\n",
-    "    revenue_ts = []\n",
-    "    revenue_ucb = []\n",
-    "    \n",
-    "    np.random.shuffle(shop_ts.customers_random)\n",
-    "\n",
-    "    for cust in shop_ts.customers_random:\n",
-    "        partial_revenue = 0\n",
-    "        cust = int(cust)\n",
-    "        #Check if first item has been bought and update the parameters\n",
-    "        ts_has_bought1 = env.round1(cust, shop_ts.best_price[0])\n",
-    "        shop_ts.price_learner.update(chosen_price_ts, ts_has_bought1, cust)\n",
-    "\n",
-    "        ucb_has_bought1 = env.round1(cust, shop_ucb.best_price[0])\n",
-    "        shop_ucb.price_learner.update(chosen_price_ucb, ucb_has_bought1, cust)\n",
-    "        \n",
-    "        partial_revenue_ts = ts_has_bought1*shop_ts.best_price[0]\n",
-    "        partial_revenue_ucb = ucb_has_bought1*shop_ucb.best_price[0]\n",
-    "\n",
-    "        #Check if second item has been bought\n",
-    "        if ts_has_bought1 == 1:\n",
-    "            ts_has_bought2 = env.round2(cust, shop_ts.matched_promos[cust], shop_ts.best_price[1])\n",
-    "            partial_revenue_ts += ts_has_bought2*shop_ts.best_price[1]*(1-shop_ts.discounts[shop_ts.matched_promos[cust]])\n",
-    "        revenue_ts.append(partial_revenue_ts)\n",
-    "        \n",
-    "        if ucb_has_bought1 == 1:\n",
-    "            ucb_has_bought2 = env.round2(cust, shop_ucb.matched_promos[cust], shop_ucb.best_price[1])\n",
-    "            partial_revenue_ucb += ucb_has_bought2*shop_ucb.best_price[1]*(1-shop_ucb.discounts[shop_ucb.matched_promos[cust]])\n",
-    "        revenue_ucb.append(partial_revenue_ucb)\n",
-    "\n",
-    "        expected_revenue = shop_clairvoyant.best_price[0]*env.true_conv1[cust, index(env.prices1, shop_clairvoyant.best_price[0])] + env.true_conv1[cust, index(env.prices1, shop_clairvoyant.best_price[0])]*env.true_conv2[cust, shop_clairvoyant.matched_promos[cust], index(env.prices2, shop_clairvoyant.best_price[1])]*shop_clairvoyant.best_price[1]*(1-shop_clairvoyant.discounts[shop_clairvoyant.matched_promos[cust]])\n",
-    "        clairvoyant_per_class.append(expected_revenue)\n",
-    "    \n",
-    "    ts_rewards_per_class_per_day.append(np.mean(revenue_ts))\n",
-    "    u_rewards_per_class_per_day.append(np.mean(revenue_ucb))\n",
-    "    clairvoyant_per_class_per_day.append(np.mean(clairvoyant_per_class))\n"
+    "len(ts_rewards_per_class_per_day)"
    ],
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "365"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 10
+    }
+   ],
    "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": 4,
    "source": [
-    "import matplotlib.pyplot as plt\n",
-    "\n",
-    "plt.plot(np.cumsum(clairvoyant_per_class_per_day), color='green', label='Clairvoyant')\n",
-    "plt.plot(np.cumsum(u_rewards_per_class_per_day),color='blue',label='UCB')\n",
-    "plt.plot(np.cumsum(ts_rewards_per_class_per_day),color='red',label = 'TS')\n",
-    "\n",
-    "plt.legend()\n",
-    "plt.xlabel('Time')\n",
-    "plt.ylabel('Revenue')\n",
-    "\n",
-    "#plt.yscale('symlog')\n"
+    "import matplotlib.pyplot as plt\r\n",
+    "\r\n",
+    "plt.plot(np.cumsum(clairvoyant_per_class_per_day), color='green', label='Clairvoyant')\r\n",
+    "plt.plot(np.cumsum(u_rewards_per_class_per_day),color='blue',label='UCB')\r\n",
+    "plt.plot(np.cumsum(ts_rewards_per_class_per_day),color='red',label = 'TS')\r\n",
+    "\r\n",
+    "plt.legend()\r\n",
+    "plt.xlabel('Time')\r\n",
+    "plt.ylabel('Revenue')\r\n",
+    "\r\n",
+    "#plt.yscale('symlog')\r\n"
    ],
    "outputs": [
     {
@@ -216,11 +253,11 @@
    "cell_type": "code",
    "execution_count": 9,
    "source": [
-    "plt.plot(np.cumsum(np.array(clairvoyant_per_class_per_day) - np.array(ts_rewards_per_class_per_day)), color='red', label='TS')\n",
-    "plt.plot(np.cumsum(np.array(clairvoyant_per_class_per_day) - np.array(u_rewards_per_class_per_day)), color='blue', label='UCB')\n",
-    "\n",
-    "plt.legend()\n",
-    "plt.xlabel('Days')\n",
+    "plt.plot(np.cumsum(np.array(clairvoyant_per_class_per_day) - np.array(ts_rewards_per_class_per_day)), color='red', label='TS')\r\n",
+    "plt.plot(np.cumsum(np.array(clairvoyant_per_class_per_day) - np.array(u_rewards_per_class_per_day)), color='blue', label='UCB')\r\n",
+    "\r\n",
+    "plt.legend()\r\n",
+    "plt.xlabel('Days')\r\n",
     "plt.ylabel('Regret')"
    ],
    "outputs": [
