fix on learners

--- a/step3.ipynb
+++ b/step3.ipynb
@@ -119,7 +119,7 @@
     "        expected_reward_from_class = customers_mean[j]*env.prices1[i]*env.true_conv1[j, i]\r\n",
     "        print(\"Expected reward from item 1 for price-class\", i, \"-\", j, \"----->\", expected_reward_from_class)\r\n",
     "        for k in range(len(env.discounts)):\r\n",
-    "            expected_reward_from_class += promo_fractions[j,k]*customers_mean[j]*env.true_conv1[j, i]*price2*env.true_conv2[k, j, i]*(1 - env.discounts[k])\r\n",
+    "            expected_reward_from_class += promo_fractions[j,k]*customers_mean[j]*env.true_conv1[j, i]*price2*env.true_conv2[k, j, price2_index]*(1 - env.discounts[k])\r\n",
     "        expected_rewards[i] += expected_reward_from_class\r\n",
     "\r\n",
     "        print(\"Expected Reward for Price\", i, \"from class\", j, \"--->\", expected_reward_from_class)\r\n",
