--- a/step3.ipynb
+++ b/step3.ipynb
@@ -73,8 +73,9 @@
     "shop_ucb.set_conv_rate(env.true_conv1, env.true_conv2)\r\n",
     "\r\n",
     "#Initialize learners\r\n",
-    "shop_ts.set_price_learner('TS')\r\n",
-    "shop_ucb.set_price_learner('UCB')\r\n"
+    "n_arms = len(env.prices1)\r\n",
+    "shop_ts.set_price_learner('TS', n_arms)\r\n",
+    "shop_ucb.set_price_learner('UCB', n_arms)\r\n"
    ],
    "outputs": [
     {
