step6 with 2-step learner and big learner

--- a/step5.ipynb
+++ b/step5.ipynb
@@ -85,7 +85,7 @@
    "cell_type": "code",
    "execution_count": 11,
    "source": [
-    "days = 365*2\r\n",
+    "days = 365\r\n",
     "\r\n",
     "u_rewards_per_class_per_day = []\r\n",
     "c_rewards_per_class_per_day = []\r\n",
