--- a/step6.ipynb
+++ b/step6.ipynb
@@ -16,7 +16,7 @@
    "cell_type": "code",
    "execution_count": 2,
    "source": [
-    "#### TODO büyük learner ekle\r\n",
+    "\r\n",
     "\r\n",
     "shop_ts = Shop.Shop()\r\n",
     "shop_big_ts = Shop.Shop()\r\n",
@@ -86,77 +86,77 @@
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "Expected reward from item 1 for price-class 0 - 0 -----> 1885.9133486857459\n",
-      "Expected Reward for Price 0 from class 0 ---> 6804.087139073302\n",
+      "Expected reward from item 1 for price-class 0 - 0 -----> 1961.0616703898359\n",
+      "Expected Reward for Price 0 from class 0 ---> 8963.51907082549\n",
       "************\n",
-      "Expected reward from item 1 for price-class 0 - 1 -----> 1918.1332423949664\n",
-      "Expected Reward for Price 0 from class 1 ---> 11668.290273064675\n",
+      "Expected reward from item 1 for price-class 0 - 1 -----> 1743.4308350504875\n",
+      "Expected Reward for Price 0 from class 1 ---> 10321.200246002849\n",
       "************\n",
-      "Expected reward from item 1 for price-class 0 - 2 -----> 1619.2899492255256\n",
-      "Expected Reward for Price 0 from class 2 ---> 8171.719231392581\n",
+      "Expected reward from item 1 for price-class 0 - 2 -----> 1058.959440900788\n",
+      "Expected Reward for Price 0 from class 2 ---> 6656.070855981528\n",
       "************\n",
-      "Expected reward from item 1 for price-class 0 - 3 -----> 1824.8178720953506\n",
-      "Expected Reward for Price 0 from class 3 ---> 11091.72467595708\n",
+      "Expected reward from item 1 for price-class 0 - 3 -----> 1781.8133943148903\n",
+      "Expected Reward for Price 0 from class 3 ---> 8686.440881384673\n",
       "************\n",
-      "Expected reward from item 1 for price-class 1 - 0 -----> 1478.4450115158677\n",
-      "Expected Reward for Price 1 from class 0 ---> 4048.817438306226\n",
+      "Expected reward from item 1 for price-class 1 - 0 -----> 2910.882247730787\n",
+      "Expected Reward for Price 1 from class 0 ---> 9840.23391650221\n",
       "************\n",
-      "Expected reward from item 1 for price-class 1 - 1 -----> 1600.6153635960147\n",
-      "Expected Reward for Price 1 from class 1 ---> 7024.726263308691\n",
+      "Expected reward from item 1 for price-class 1 - 1 -----> 2339.697081845423\n",
+      "Expected Reward for Price 1 from class 1 ---> 10013.98376458115\n",
       "************\n",
-      "Expected reward from item 1 for price-class 1 - 2 -----> 2192.685800784717\n",
-      "Expected Reward for Price 1 from class 2 ---> 8107.796373179056\n",
+      "Expected reward from item 1 for price-class 1 - 2 -----> 1493.205197920578\n",
+      "Expected Reward for Price 1 from class 2 ---> 6754.744992261751\n",
       "************\n",
-      "Expected reward from item 1 for price-class 1 - 3 -----> 2557.3330739512794\n",
-      "Expected Reward for Price 1 from class 3 ---> 11215.20796843881\n",
+      "Expected reward from item 1 for price-class 1 - 3 -----> 2290.1041562786613\n",
+      "Expected Reward for Price 1 from class 3 ---> 8206.292744880091\n",
       "************\n",
-      "Expected reward from item 1 for price-class 2 - 0 -----> 1898.7489828380121\n",
-      "Expected Reward for Price 2 from class 0 ---> 4374.572564135283\n",
+      "Expected reward from item 1 for price-class 2 - 0 -----> 3789.136807748105\n",
+      "Expected Reward for Price 2 from class 0 ---> 10554.163497450412\n",
       "************\n",
-      "Expected reward from item 1 for price-class 2 - 1 -----> 1740.970369132392\n",
-      "Expected Reward for Price 2 from class 1 ---> 6165.776245388752\n",
+      "Expected reward from item 1 for price-class 2 - 1 -----> 1809.2629088273604\n",
+      "Expected Reward for Price 2 from class 1 ---> 6260.09620938115\n",
       "************\n",
-      "Expected reward from item 1 for price-class 2 - 2 -----> 2907.760083644347\n",
-      "Expected Reward for Price 2 from class 2 ---> 8790.860984350973\n",
+      "Expected reward from item 1 for price-class 2 - 2 -----> 1137.6261194566878\n",
+      "Expected Reward for Price 2 from class 2 ---> 4144.077496805325\n",
       "************\n",
-      "Expected reward from item 1 for price-class 2 - 3 -----> 2402.3525408448377\n",
-      "Expected Reward for Price 2 from class 3 ---> 8502.242685077897\n",
+      "Expected reward from item 1 for price-class 2 - 3 -----> 1783.5937480603095\n",
+      "Expected Reward for Price 2 from class 3 ---> 5239.356977227801\n",
       "************\n",
-      "Expected reward from item 1 for price-class 3 - 0 -----> 2087.1886868810607\n",
-      "Expected Reward for Price 3 from class 0 ---> 4264.4163315266505\n",
+      "Expected reward from item 1 for price-class 3 - 0 -----> 3325.450391295328\n",
+      "Expected Reward for Price 3 from class 0 ---> 8075.188771053383\n",
       "************\n",
-      "Expected reward from item 1 for price-class 3 - 1 -----> 319.5613150184584\n",
-      "Expected Reward for Price 3 from class 1 ---> 969.3124237510193\n",
+      "Expected reward from item 1 for price-class 3 - 1 -----> 2072.8652350125844\n",
+      "Expected Reward for Price 3 from class 1 ---> 6152.30667850469\n",
       "************\n",
-      "Expected reward from item 1 for price-class 3 - 2 -----> 3436.6632018834403\n",
-      "Expected Reward for Price 3 from class 2 ---> 8999.222917081377\n",
+      "Expected reward from item 1 for price-class 3 - 2 -----> 582.5554971256641\n",
+      "Expected Reward for Price 3 from class 2 ---> 1814.190212089435\n",
       "************\n",
-      "Expected reward from item 1 for price-class 3 - 3 -----> 1052.9814054870108\n",
-      "Expected Reward for Price 3 from class 3 ---> 3191.9084074771786\n",
+      "Expected reward from item 1 for price-class 3 - 3 -----> 1438.0329961031373\n",
+      "Expected Reward for Price 3 from class 3 ---> 3667.016611084835\n",
       "************\n",
-      "Expected reward from item 1 for price-class 4 - 0 -----> 1592.1444221172112\n",
-      "Expected Reward for Price 4 from class 0 ---> 2976.167530924673\n",
+      "Expected reward from item 1 for price-class 4 - 0 -----> 1457.2734557485626\n",
+      "Expected Reward for Price 4 from class 0 ---> 3191.7923048568664\n",
       "************\n",
-      "Expected reward from item 1 for price-class 4 - 1 -----> 190.6057619715229\n",
-      "Expected Reward for Price 4 from class 1 ---> 513.5649233577554\n",
+      "Expected reward from item 1 for price-class 4 - 1 -----> 1422.412807125135\n",
+      "Expected Reward for Price 4 from class 1 ---> 3755.1942060024694\n",
       "************\n",
-      "Expected reward from item 1 for price-class 4 - 2 -----> 1474.644926349488\n",
-      "Expected Reward for Price 4 from class 2 ---> 3463.686810794551\n",
+      "Expected reward from item 1 for price-class 4 - 2 -----> 231.9113297505768\n",
+      "Expected Reward for Price 4 from class 2 ---> 640.4990750720139\n",
       "************\n",
-      "Expected reward from item 1 for price-class 4 - 3 -----> 795.6299831089074\n",
-      "Expected Reward for Price 4 from class 3 ---> 2142.436335051349\n",
+      "Expected reward from item 1 for price-class 4 - 3 -----> 965.4843372356528\n",
+      "Expected Reward for Price 4 from class 3 ---> 2212.586440161129\n",
       "************\n",
       "[ 80. 120. 160. 200. 240.]\n",
-      "[[13629.61755604 21394.16121156 28852.88479785 34479.65927788\n",
-      "  37735.82131949]\n",
-      " [12470.91447099 18207.54669023 23828.63199661 28044.76978504\n",
-      "  30396.54804323]\n",
-      " [12893.28208758 17704.94971206 22434.24881435 25853.91698091\n",
-      "  27833.45247895]\n",
-      " [ 9198.8028428  11915.24132032 14652.01056927 16389.09941192\n",
-      "  17424.86007984]\n",
-      " [ 5152.8621941   6457.91426885  7739.54209729  8625.55742051\n",
-      "   9095.85560013]]\n"
+      "[[12306.43483078 18418.46058868 24666.20459433 30626.69460168\n",
+      "  34627.23105419]\n",
+      " [14326.17643226 19943.97445965 25666.49425666 31119.97971536\n",
+      "  34815.25541823]\n",
+      " [12176.31162841 16003.99042192 19831.81918214 23514.59135939\n",
+      "  26197.69418086]\n",
+      " [ 9983.50384753 12610.94273154 15242.70870493 17821.9573306\n",
+      "  19708.70227273]\n",
+      " [ 5271.45324177  6488.00568642  7725.76439027  8946.91614633\n",
+      "   9800.07202609]]\n"
      ]
     }
    ],
@@ -176,18 +176,87 @@
     "\r\n",
     "clairvoyant_promo_fractions = shop_clairvoyant.get_promo_fractions_from_tuples(cmt)\r\n",
     "\r\n",
-    "print(clairvoyant_promo_fractions)\r\n"
+    "print(clairvoyant_promo_fractions)\r\n",
+    "print(clairvoyant_price1)\r\n",
+    "print(clairvoyant_price2)\r\n",
+    "print(np.max(expected_rewards))"
    ],
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "[[0.2 0.  0.8 0. ]\n",
-      " [0.  1.  0.  0. ]\n",
-      " [0.4 0.  0.  0.6]\n",
-      " [1.  0.  0.  0. ]]\n"
+      "[[0.  1.  0.  0. ]\n",
+      " [0.6 0.  0.4 0. ]\n",
+      " [1.  0.  0.  0. ]\n",
+      " [0.  0.  0.4 0.6]]\n",
+      "120.0\n",
+      "300.0\n",
+      "34815.2554182252\n"
      ]
+    }
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "source": [
+    "##### other way to calculate clairvoyant\r\n",
+    "cec = shop_clairvoyant.get_customer_list()\r\n",
+    "cep = shop_clairvoyant.get_promo_list(generated_promo_ratios)\r\n",
+    "\r\n",
+    "cmt, cpa, cer  = shop_clairvoyant.get_clairvoyant_prices_and_matching(cec, cep, 5, 5)\r\n",
+    "\r\n",
+    "cp1idx = price_arms[cpa][0]\r\n",
+    "cp2idx = price_arms[cpa][1]\r\n",
+    "cp1 = env.prices1[cp1idx]\r\n",
+    "cp2 = env.prices2[cp2idx]\r\n",
+    "\r\n",
+    "cpf = shop_clairvoyant.get_promo_fractions_from_tuples(cmt)\r\n",
+    "\r\n",
+    "print(cpf)\r\n",
+    "print(cp1)\r\n",
+    "print(cp2)\r\n",
+    "print(cer)"
+   ],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "[[0.  1.  0.  0. ]\n",
+      " [1.  0.  0.  0. ]\n",
+      " [0.6 0.  0.4 0. ]\n",
+      " [0.  0.  0.4 0.6]]\n",
+      "120.0\n",
+      "200.0\n",
+      "16234.864785876405\n"
+     ]
+    }
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "source": [
+    "cep"
+   ],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "array([0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,\n",
+       "       0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 1, 1, 1,\n",
+       "       1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 2,\n",
+       "       2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 3, 3, 3,\n",
+       "       3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3])"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 8
     }
    ],
    "metadata": {}
@@ -201,6 +270,7 @@
     "ts_rewards_per_class_per_day = []\r\n",
     "big_ts_rewards_per_class_per_day = []\r\n",
     "c_rewards_per_class_per_day = []\r\n",
+    "calt_rewards_per_class_per_day = []\r\n",
     "\r\n",
     "customers_em = np.array([0, 0, 0, 0])\r\n",
     "customers_ie = np.array([25, 25, 25, 25])\r\n",
@@ -233,11 +303,11 @@
     "    # get promo fractions and prices for big learner\r\n",
     "    expected_customers_big_ts = shop_big_ts.get_customer_list()\r\n",
     "    expected_promos_big_ts = shop_big_ts.get_promo_list(generated_promo_ratios)\r\n",
-    "    matched_tuples_big_ts, matching_arm_index_big_ts = shop_big_ts.assignment_learner.pull_arm_all(expected_customers_big_ts, expected_promos_big_ts, matching_arms, len(env.prices1), len(env.prices2))\r\n",
+    "    matched_tuples_big_ts, price_arm_index_big_ts = shop_big_ts.assignment_learner.pull_arm_all(expected_customers_big_ts, expected_promos_big_ts, matching_arms, len(env.prices1), len(env.prices2))\r\n",
     "    promo_fractions_big_ts = shop_big_ts.get_promo_fractions_from_tuples(matched_tuples_big_ts)\r\n",
     "\r\n",
-    "    price1idx_big_ts = matching_arms[matching_arm_index_big_ts][0]\r\n",
-    "    price2idx_big_ts = matching_arms[matching_arm_index_big_ts][1]\r\n",
+    "    price1idx_big_ts = price_arms[price_arm_index_big_ts][0]\r\n",
+    "    price2idx_big_ts = price_arms[price_arm_index_big_ts][1]\r\n",
     "    price1_big_ts = env.prices1[price1idx_big_ts]\r\n",
     "    price2_big_ts = env.prices2[price2idx_big_ts]\r\n",
     "\r\n",
@@ -251,6 +321,7 @@
     "    revenue_ts = []\r\n",
     "    revenue_big_ts = []\r\n",
     "    revenue_c = []\r\n",
+    "    revenue_calt = []\r\n",
     "\r\n",
     "    big_ts_total_reward = 0\r\n",
     "    ts_total_reward = 0\r\n",
@@ -264,6 +335,7 @@
     "        selected_promo_ts = np.random.choice([0, 1, 2, 3], 1, p=promo_fractions_ts[cust])\r\n",
     "        selected_promo_big_ts = np.random.choice([0, 1, 2, 3], 1, p=promo_fractions_big_ts[cust])\r\n",
     "        selected_promo_c = np.random.choice([0, 1, 2, 3], 1, p=clairvoyant_promo_fractions[cust])\r\n",
+    "        selected_promo_calt = np.random.choice([0, 1, 2, 3], 1, p=cpf[cust])\r\n",
     "\r\n",
     "        ts_buy1 = env.round1(cust, price1_ts)\r\n",
     "        ts_buy2 = 0\r\n",
@@ -279,10 +351,16 @@
     "        c_buy2 = 0\r\n",
     "        if c_buy1:\r\n",
     "            c_buy2 = env.round2(cust, selected_promo_c, clairvoyant_price2)\r\n",
+    "\r\n",
+    "        calt_buy1 = env.round1(cust, cp1)\r\n",
+    "        calt_buy2 = 0\r\n",
+    "        if calt_buy1:\r\n",
+    "            calt_buy2 = env.round2(cust, selected_promo_calt, cp2)\r\n",
     "        \r\n",
     "        ts_ind_reward = ts_buy1*price1_ts + ts_buy2*price2_ts*(1-shop_ts.discounts[selected_promo_ts])\r\n",
     "        big_ts_ind_reward = big_ts_buy1*price1_big_ts + big_ts_buy2*price2_big_ts*(1-shop_big_ts.discounts[selected_promo_big_ts])\r\n",
     "        c_ind_reward = c_buy1*clairvoyant_price1 + c_buy2*clairvoyant_price2*(1-shop_ts.discounts[selected_promo_c])\r\n",
+    "        calt_ind_reward = calt_buy1*cp1 + calt_buy2*cp2*(1-shop_ts.discounts[selected_promo_calt])\r\n",
     "        \r\n",
     "        norm_ts_ind_reward = ts_ind_reward / max_ind_reward\r\n",
     "        norm_big_ts_ind_reward = big_ts_ind_reward / max_ind_reward\r\n",
@@ -293,15 +371,19 @@
     "        matching_arm_index_ts = matching_arms.index((price1idx_ts, price2idx_ts, cust, selected_promo_ts))\r\n",
     "        shop_ts.assignment_learner.update(matching_arm_index_ts, norm_ts_ind_reward)\r\n",
     "\r\n",
+    "        # buradaki matching arm index sadece price ikilisini veriyor\r\n",
+    "        matching_arm_index_big_ts = matching_arms.index((price1idx_big_ts, price2idx_big_ts, cust, selected_promo_big_ts))\r\n",
     "        shop_big_ts.assignment_learner.update(matching_arm_index_big_ts, norm_big_ts_ind_reward)\r\n",
     "\r\n",
     "        revenue_ts.append(ts_ind_reward)\r\n",
     "        revenue_big_ts.append(big_ts_ind_reward)\r\n",
     "        revenue_c.append(c_ind_reward)\r\n",
+    "        revenue_calt.append(calt_ind_reward)\r\n",
     "\r\n",
     "    ts_rewards_per_class_per_day.append(np.mean(revenue_ts))\r\n",
     "    big_ts_rewards_per_class_per_day.append(np.mean(revenue_big_ts))\r\n",
     "    c_rewards_per_class_per_day.append(np.mean(revenue_c))\r\n",
+    "    calt_rewards_per_class_per_day.append(np.mean(revenue_calt))\r\n",
     "\r\n",
     "\r\n",
     "\r\n",
@@ -338,6 +420,7 @@
    "source": [
     "import matplotlib.pyplot as plt\r\n",
     "plt.plot(np.cumsum(c_rewards_per_class_per_day), color='green', label='Clairvoyant')\r\n",
+    "plt.plot(np.cumsum(calt_rewards_per_class_per_day), color='orange', label='Clairvoyant Alt')\r\n",
     "plt.plot(np.cumsum(ts_rewards_per_class_per_day), color='red', label='2-step TS')\r\n",
     "plt.plot(np.cumsum(big_ts_rewards_per_class_per_day), color='blue', label='Big TS')\r\n",
     "#plt.plot(np.cumsum(c_expected_per_day), color='black', label='Expected')\r\n",
